# Thomas-Austad

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Calculator.py  Dockerfile  README.md  RPS.py  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  db.py  local_launcher.py  main.py  mcp_server.py  observability.py  privacy_migrate.py  rate_limit.py  repositories.py  store.py
browser_ui_dist/: browser.html
docs/: BUILD_ROADMAP.md  GITHUB_TICKETS.md  PRIME_TIME_ROADMAP.md  agent-regression-evals-plan.md  autonomous-application-development-workflow.md  autonomous-workflow-example.md  codex-usage-policy-plan.md  dev-setup.md  evidence-records-plan.md  implementation-plan-05-profile-review-corrections.md  implementation-plan-09-local-auth-audit.md  implementation-plan-10-data-protection.md  implementation-plan-11-complete-prepare-flow.md  implementation-plan-15-persistence-schema-hardening.md  implementation-plan-16-rate-limiting-abuse-controls.md  implementation-plan-17-job-source-coverage-refresh.md  implementation-plan-18-prompt-injection-isolation.md  implementation-plan-19-container-deployment-hardening.md  implementation-plan-20-browser-handoff.md  implementation-plan-21-model-default-policy-alignment.md  implementation-plan-23-widget-shell-security-foundation.md  implementation-plan-24-widget-profile-review.md  implementation-plan-25-widget-job-review.md  implementation-plan-26-widget-application-review.md  implementation-plan-28-local-installation-and-startup.md  implementation-plan-29-standalone-browser-ui.md  operations-runbook.md  (+15 more)
(+134 files in other folders)
