[project]
name = "talent-advisor-platform"
version = "0.1.0"
description = "ChatGPT-native AI career platform MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "python-docx>=1.1",
  "pypdf>=5.0",
  "beautifulsoup4>=4.12",
  "tenacity>=9.0",
  "mcp>=1.0",
  "keyring>=25.0",
  "cryptography>=49,<50",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.6"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
  "eval: synthetic agent regression fixtures and invariant checks",
]

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "sql*", "docs*", "widget*"]
